codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__task_list_panel__task_list_chatwidget_retained_panel.snap
---
source: tui/src/chatwidget/tests/task_list_panel.rs
expression: "render_task_panel(&chat, 48)"
---
Tasks 1/3
   ✔ Explore codebase
   □ Implement feature
   □ Write tests
