codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__task_list_panel__task_list_plan_update_transcript.snap
---
source: tui/src/chatwidget/tests/task_list_panel.rs
expression: transcript
---
• Updated Plan
  └ Adapting plan
    ✔ Explore codebase
    □ Implement feature
    □ Write tests
